# termfold

./: AGENTS.md  Cargo.toml  LICENSE  REQUIREMENTS.md  TASKS.md
src/: client.rs  config.rs  ipc.rs  main.rs  outer.rs  pty.rs  render.rs  runtime.rs  server.rs  session.rs  terminal.rs
terminfo/: README.md  termfold-256color.terminfo
terminfo/compiled/t/: termfold-256color
tests/: server_lifecycle.rs
