[package]
name = "termfold"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
unicode-width = { version = "0.2.2", default-features = false }
vte = { version = "0.15.0", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
